--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="AppTheme33" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimaryDark">@color/colorPrimary</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="statusBarBackground">@android:color/transparent</item>
@@ -11,7 +11,7 @@
         <!--        <item name="android:windowTranslucentStatus">true</item>-->
     </style>
 
-    <style name="MyCardView" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+    <style name="MyCardView" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="cardBackgroundColor">@color/colorPrimary</item>
     </style>
 
@@ -41,6 +41,15 @@
     <style name="DetailTextAge">
         <item name="android:textColor">@color/cl_white</item>
         <item name="android:textSize">12sp</item>
+    </style>
+    <style name="DetailLike">
+        <item name="android:layout_width">16dp</item>
+        <item name="android:layout_height">16dp</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_gravity">right</item>
+        <item name="android:layout_marginRight">16dp</item>
+        <item name="android:layout_marginEnd">16dp</item>
+        <item name="android:layout_alignParentEnd">true</item>
     </style>
 
     <style name="DetailTextTags">
@@ -88,4 +97,27 @@
         <item name="android:progressDrawable">@drawable/rating_bar_bg</item>
     </style>
 
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme2" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@android:color/transparent</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+    <style name="AppTheme2.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="TextAppearance.MyApp.Title.Collapsed" parent="DetailTextTitle">
+
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="TextAppearance.MyApp.Title.Expanded" parent="DetailTextTitle">
+
+        <item name="android:lineSpacingExtra">20sp</item>
+    </style>
 </resources>
