--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
 
     <color name="colorPrimary">#FF191926</color>
     <color name="colorPrimaryDark">#FFC107</color>
-    <color name="colorAccent">#00BCD4</color>
+    <color name="colorAccent">#222232</color>
     <color name="activityBackground">#673AB7</color>
     <color name="your_color">#3F51B5</color>
 </resources>
